tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__LeadGalenaSilver-AAAAAAAAAAAAAAAAAAACYg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 610,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can't find Lead in the Overworld or the Nether. So it's time to explore the mysterious Twilight Forest a bit and find a Cryolite vein at Y 5-40.\n\nYou can get Lead, Silver, Cryolite for Aluminium production and Galena, which is more lead, in the vein.\n\nThere is some Silver in small ores in the OW and Nether, but this is a better source.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Lead, Galena, Silver and Cryolite",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
