tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__MagicFeather-AAAAAAAAAAAAAAAAAAAELg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1070,
  "prerequisites": [
    225
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to understand where you are, and where you §owant§r to be, you'll need a map. This is a magical place, so why not a magical map? The main part is a Magic Map Focus.\n\nFirst, go find some Raven feathers. You can get them by killing Ravens. They like to hang out near the obsidian pillars.\n\nThen you need some Torchberries (found underground) and some Glowstone dust.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magic Feather",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    225
  ],
  "rewards": [],
  "tasks": []
}
