tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__MagicMap-AAAAAAAAAAAAAAAAAAAELw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1071,
  "prerequisites": [
    1070
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For the magic map you need the magic map focus and a paper stack, made from a stack of paper.\n\nIt will fill in the area near you, and reveal boss locations. You need to kill these to get access to the rest of the Twilight Forest. Start with the Naga.\n\nYou can see what to do next in the TF achievement tab. There's also quests for the boss kills on the kill all the things tab. You can only get one map every 24 hours, so be careful with it.\n\n§4Only use the map in the Twilight Forest, using the map in any other dimension will lag the server!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magic Map",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 1728000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1070
  ],
  "rewards": [],
  "tasks": []
}
