tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__NeedMoreSugar-UAWjHTM_SAW95_Cji-9PiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3692749408126848904,
  "prerequisites": [
    1002
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With Briar starting to consume you might also want to increase your sugar production.\n\nSweeds are planted on grass, not farmland, and will spread to propagate themselves. Once fully matured they can be harvested for sugar as well as sugar cane.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Need More Sugar?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1002
  ],
  "rewards": [],
  "tasks": []
}
