tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__NotJustForDecora-AAAAAAAAAAAAAAAAAAAA-w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 251,
  "prerequisites": [
    243
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Sure, they look pretty, but they serve a much more important purpose: Channeling vast amounts of vis and essentia. Your first uses will be an infusion setup and an alchemical furnace.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Not Just For Decoration",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    243
  ],
  "rewards": [],
  "tasks": []
}
